Restore full-width header and horizontal nav buttons

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,15 +11,17 @@
 
   <!-- Header / navigation -->
   <header class="app-header">
-    <div class="app-header-left">
-      <div class="app-title">🎲 Bibliothèque de jeux</div>
-      <div class="app-subtitle">Recherche & gestion</div>
-    </div>
+    <div class="app-header-inner">
+      <div class="app-header-left">
+        <div class="app-title">🎲 Bibliothèque de jeux</div>
+        <div class="app-subtitle">Recherche & gestion</div>
+      </div>
 
-    <nav class="app-nav">
-      <button class="nav-btn nav-btn-active" data-mode="read">Recherche</button>
-      <button class="nav-btn" data-mode="edit">Édition</button>
-    </nav>
+      <nav class="app-nav">
+        <button class="nav-btn nav-btn-active" data-mode="read">Recherche</button>
+        <button class="nav-btn" data-mode="edit">Édition</button>
+      </nav>
+    </div>
   </header>
 
   <main class="app-main">
