--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@1.5.10/css/pico.min.css" />
   <link rel="stylesheet" href="style.css" />
 </head>
-<body data-api-base-url="http://localhost:5000">
+<body data-api-base-url="https://boardgame-crud-backend.onrender.com">
 
   <!-- Header / navigation -->
   <header class="app-header">
