--- a/frontend/index.html
+++ b/frontend/index.html
@@ -44,6 +44,13 @@
           Tu peux poser la question en français. Exemple :
           « Je veux un jeu coopératif rapide pour 2 joueurs ».
         </p>
+        <div id="search-status" class="search-status" aria-live="polite" aria-atomic="true">
+          <div id="search-loading" class="search-loading hidden">
+            <p>Recherche en cours...</p>
+            <div class="spinner" role="presentation"></div>
+          </div>
+          <div id="search-feedback" class="search-feedback hidden"></div>
+        </div>
       </div>
 
       <div id="query-extract" class="query-extract card">
