--- a/frontend/index.html
+++ b/frontend/index.html
@@ -47,6 +47,7 @@
         <div id="search-status" class="search-status" aria-live="polite" aria-atomic="true">
           <div id="search-loading" class="search-loading hidden">
             <p>Recherche en cours...</p>
+            <!-- comment -->
             <div class="spinner" role="presentation"></div>
           </div>
           <div id="search-feedback" class="search-feedback hidden"></div>
