Adjust fonts and table sizing

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,7 +30,7 @@
     <section id="mode-read" class="panel visible">
 
       <div class="search-card card">
-        <label for="natural-query" class="field-label">Recherche intelligente</label>
+          <label for="natural-query" class="field-label search-title">Recherche intelligente</label>
         <div class="search-row">
           <input
             id="natural-query"
