Improve mobile search results with card layout

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -74,6 +74,7 @@
             </tbody>
           </table>
         </div>
+        <div id="results-cards" class="results-cards" aria-live="polite"></div>
       </div>
 
       <div id="empty-state" class="empty-state hidden">
