--- a/frontend/index.html
+++ b/frontend/index.html
@@ -74,6 +74,9 @@
             </tbody>
           </table>
         </div>
+        <div id="results-cards" class="results-cards" aria-live="polite">
+          <!-- Les cartes seront injectées ici sur mobile -->
+        </div>
       </div>
 
       <div id="empty-state" class="empty-state hidden">
